--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "animate.css-jquery": "^1.0.1",
+    "animejs": "^3.2.1",
+    "barba-custom.js": "^1.0.12",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-addons": "^0.9.1-deprecated",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.3",
+    "sweetalert2": "^11.4.6",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -36,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "envify": "^4.1.0",
+    "terser": "^5.12.1",
+    "uglifyify": "^5.0.2"
   }
 }
